# coruscant

./: .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  opencode.json  pyproject.toml  requirements.txt  run.sh
.github/workflows/: checks.yml
.zed/: debug.json
apollo/: pumps.py  sensors.py  servos.py  settings.py  valve.py
apollo/services/: database.py  gpio.py
apollo/tests/: conftest.py  test_database.py
coruscant/: consumer.py  exceptions.py  pumps.py  sensors.py  server.py  servos.py  settings.py  sync.py  valve.py
coruscant/.github/workflows/: checks.yml
coruscant/debug/: pump.py
coruscant/services/: api.py  database.py  gpio.py  kafka.py  logging.py  relay.py  relay_status.py  sensors.py  valve.py
coruscant/tests/: conftest.py  test_api.py  test_api_server.py  test_consumer.py  test_database.py  test_kafka.py  test_logs.py  test_pumps.py  test_relay_status.py  test_relays.py
utils/: consumer.service  create_database.sql  crontab.conf  database.sql  fastapi.service
utils/config/: crontab.conf
