[project]
name = "coruscant"
version = "4.0.0b"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi==0.115.6",
    "pi1wire==0.3.0",
    "psycopg2==2.9.10",
    "requests==2.32.3",
    "RPi.GPIO==0.7.1",
    "RPLCD==1.3.1",
    "smbus2==0.5.0",
    "uvicorn[standard]==0.34.0",
    "Adafruit-DHT==1.4.0 ; platform_machine == 'armv7l'",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0 ; platform_machine == 'x86_64'",
    "ipython>=8.31.0",
    "pre-commit>=4.5.0 ; platform_machine == 'x86_64'",
    "prospector>=1.13.3 ; platform_machine == 'x86_64'",
    "pytest>=9.0.1 ; platform_machine == 'x86_64'",
    "pyupgrade>=3.19.1 ; platform_machine == 'x86_64'",
]

[tool.bandit]
exclude_dirs = []
skips = ["B101", "B308", "B703"]

[tool.black]
line-length = 120
target_version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.idea
  | \.vscode
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
)/
'''

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "N",  # pep8-naming
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "S",  # flake8-bandit
    "BLE",  # flake8-blind-except
    "A",  # flake8-builtins
    "DJ",  # flake8-django
    "I",  # isort
    "INP",  # flake8-no-pep420
    "RUF"  # Ruff-specific rules
]
exclude = [
    ".git",
    ".idea",
    ".vscode",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
]
ignore = [
    "DJ001", # Null values for model char fields
    "ERA001",  # Disable eradicate (commented code removal)
    # Disable Conflicting lint rules,
    # see https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E501",
    "E111",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
    "S101",  # Allow to use assert statement
    "S603",
    # Disable unused `noqa` directive
    "RUF100",
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "N806",  # Variable `CONSTANT_NAME` in function should be lowercase
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
lines-after-imports = 2

[tool.ruff.lint.isort.sections]
# Group all local imports into a separate section.
"coruscant" = ["services", "settings"]

[tool.ruff.lint.per-file-ignores]
# Ignore "E402", "F403", "F405" (import violations) in __init__.py files.
# Ignore "S" (flake8-bandit) and "N802" (function name should be lowercase) in tests and docs.
# Ignore "RUF" (Ruff-specific rules) and "I" (isort) in migrations.
"__init__.py" = ["E402", "F403", "F405"]
